Fix for collection off-center

--- a/assets/custom.css
+++ b/assets/custom.css
@@ -162,6 +162,9 @@ _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_ */
   COLLECTION
 _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_ */
 
+.template-page-store #MainContent{
+  text-align: center;
+}
 .template-page-store #MainContent .banner{
   min-height: auto;
   display: inline-block;
@@ -173,6 +176,9 @@ _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_ */
 .template-page-store #MainContent .banner .banner__media.media > img{
   height: auto;
   position: relative;
+}
+.template-page-store #MainContent .banner .banner__content{
+  padding: 0;
 }
 
 /* -_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-
